Remove JQuery Plugin for mustache

--- a/html/create-new-tempuser.html
+++ b/html/create-new-tempuser.html
@@ -5,8 +5,8 @@
 		<title>StArPl - Create User</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/jquery.dataTables.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/dataTables.bootstrap.min.js"></script>
 		<script src="js/general.js"></script>
 		<script src="js/createUsers.js"></script>
 		<link rel="icon" href="img/icon.ico">
