--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -6,7 +6,7 @@
 		<link rel="icon" href="img/icon.ico">
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
-		<link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/css/dataTables.bootstrap.min.css">
 		<link rel="stylesheet" href="css/own.css">
 		<link rel="stylesheet" href="css/fileinput.min.css">
 	</head>
@@ -51,10 +51,9 @@
 		<input name="csrf_token" id="csrf_token" hidden value="<?= $_SESSION['csrf_token'] ?>" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.2/mustache.js"></script>
-		<script src="https://raw.githack.com/jonnyreeves/jquery-Mustache/master/jquery.mustache.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
-		<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/jquery.dataTables.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.19/js/dataTables.bootstrap.min.js"></script>
 		<script src="js/general.js"></script>
 		<script src="js/edit.js"></script>
 		<script src="js/viewArbeiten.js"></script>
