Use fb indices instead of strings

--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 
-		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllDocuments();user.getCurrent();changeFachbereich();">
+		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllDocuments();user.getCurrent();changeFb();">
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
 		</div>
 
