--- a/html/viewArbeiten.html
+++ b/html/viewArbeiten.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<title>StArPl</title>
 		<link rel="icon" href="img/icon.ico">
 		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -11,44 +12,51 @@
 		<link rel="stylesheet" href="css/fileinput.min.css">
 	</head>
 	<body>
+		<div>
+			<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllDocuments();user.getCurrent();changeFb();">
+				<h2><span class="glyphicon glyphicon-file"></span> Title </h2>
+			</div>
 
-		<div id="starpl-header" class="jumbotron center-block box-header" onclick="getAllDocuments();user.getCurrent();changeFb();">
-			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform</h2>
-		</div>
+			<?php
+				if (isset($_REQUEST["edit"])){
+					$edit_active = true;
+				}
+				include('php/locales/de_DE.inc.php');
+				include('html/top_navigation.html');
+				include('php/lib_helper.inc.php');
+			?>
 
-		<?php
-			if (isset($_REQUEST["edit"])){
-				$edit_active = true;
-			}
-			include('php/locales/de_DE.inc.php');
-			include('html/top_navigation.html');
-			include('php/lib_helper.inc.php');
-		?>
+			<div class="center-block box-content" id="starpl-content">
+				<div class="row">
+					<div class="col-md-3 col-sm">
+						<ul class="nav fb_side visible-md visible-lg">
+								<?= generate_site_navigation($FB_NAMES) ?>
+						</ul>
+						<nav id="fb-select-nav" class="hidden-md hidden-lg">
+							<h4>Studiengang</h4>
+							<select id="fb-select-nav-dropdown" onchange="changeFb(this.value)" class="form-control">
+								<?= generate_options($FB_NAMES) ?>
+							</select>
+						</nav>
+					</div>
 
-		<div class="center-block box-content" id="starpl-content">
-			<div class="row">
 
-				<div class="col-md-3">
-					<ul class="nav fb_side">
-							<?= generate_site_navigation($FB_NAMES) ?>
-					</ul>
-				</div>
-
-				<div class="col-md-9">
-					<h2 id="headLineStudiengang"></h2>
-						<div id="divTableOverview">
-							<?= (check_if_logged_in()) ? '<a id="toggleDocumentSelection">Nur meine Arbeiten anzeigen </a>': '' ?>
-							<table style="width:100%" class="table table-stripped table-hover table-bordered table-condensed" id="tableOverview" >
-								<thead id="tableHeader"></thead>
-								<tbody></tbody>
-							</table>
-						</div>
-						<div id="updateDocument">
+					<div class="col-md-9 col-sm-12">
+						<h3 id="headLineStudiengang"></h3>
+							<div id="divTableOverview">
+								<?= (check_if_logged_in()) ? '<a id="toggleDocumentSelection">Nur meine Arbeiten anzeigen </a>': '' ?>
+								<table style="width:100%" class="table table-stripped table-hover table-bordered table-condensed" id="tableOverview" >
+									<thead id="tableHeader"></thead>
+									<tbody></tbody>
+								</table>
+							</div>
+							<div id="updateDocument">
+							</div>
 						</div>
 					</div>
-				</div>
+			</div>
+			<input name="csrf_token" id="csrf_token" hidden value="<?= (isset($_SESSION["csrf_token"])) ? $_SESSION['csrf_token'] : '' ?>" />
 		</div>
-		<input name="csrf_token" id="csrf_token" hidden value="<?= $_SESSION['csrf_token'] ?>" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.2/mustache.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
