--- a/html/upload.html
+++ b/html/upload.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<title>StArPl - Hochladen</title>
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<script src="assets/js/bootstrap.min.js"></script>
