Add cookie dialog

--- a/html/site_notice.html
+++ b/html/site_notice.html
@@ -19,14 +19,14 @@
 			<h2><span class="glyphicon glyphicon-file"></span> StudienArbeitenPlattform - Impressum</h2>
 		</div>
 		<?php
-    $side_notice_active = true;
+    $site_notice_active = true;
 		include('html/top_navigation.html');
 		?>
 		<div class="center-block box-content" id="starpl-content" >
 
       <h2>Impressum</h2>
           <h3>Angaben gemäß §&nbsp;5&nbsp;TMG</h3>
-          <p>
+          <address>
               Hochschule für Wirtschaft und Recht Berlin
               <br />
               Campus Lichtenberg
@@ -38,7 +38,7 @@
               Alt-Friedrichsfelde 60
               <br />
               10315 Berlin
-          </p>
+          </address>
 
           <h3>Ansprechpartner</h3>
 
