--- a/html/top_navigation.html
+++ b/html/top_navigation.html
@@ -15,7 +15,8 @@
       <?= ($user_role >= $ROLLE_DOZENT)? '<li class="collapse'.((isset($create_active) && $create_active)? ' active' : '').'"><a href="./?create"><span class="glyphicon glyphicon-education"></span><span class="hidden-xs"> Studenten-Accounts</span></a></li>' :""; ?>
       <?= ($user_role >= $ROLLE_STUDENT)? '<li class="collapse'.((isset($edit_active) && $edit_active)? ' active' : '').'" id="editLink"><a href="./?edit"><span class="glyphicon glyphicon-pencil"></span><span class="hidden-xs"> Bearbeiten </span></a></li>' :""; ?>
       <?= ($user_role >= $ROLLE_STUDENT)? '<li class="collapse'.((isset($upload_active) && $upload_active)? ' active' : '').'"><a href="./?upload"><span class="glyphicon glyphicon-upload"></span><span class="hidden-xs"> Hochladen </span></a></li>' :""; ?>
-      <?= '<li class="collapse'.((isset($side_notice_active) && $side_notice_active)? ' active' : '').'"><a href="./?site_notice"><span>§</span><span class="hidden-xs"> Impressum </span></a></li>'?>
+      <?= '<li class="collapse'.((isset($conditions_active) && $conditions_active)? ' active' : '').'"><a href="./?conditions"><span>§</span><span class="hidden-xs"> Conditions </span></a></li>'?>
+      <?= '<li class="collapse'.((isset($site_notice_active) && $site_notice_active)? ' active' : '').'"><a href="./?site_notice"><span>§</span><span class="hidden-xs"> Impressum </span></a></li>'?>
     </ul>
     <ul class="nav navbar-nav inner-starpl-top-nav right-menu" >
       <?= (!check_if_logged_in())? '<li id="loginLink" class="collapse '.((isset($login_active) && $login_active)? ' active' : '').'"><a href="./login.php"><span class="glyphicon glyphicon-log-in"></span> Login </a></li>' :""; ?>
