--- a/html/login.html
+++ b/html/login.html
@@ -41,7 +41,7 @@
 				<div id='formLogin-divError' class="alert alert-danger">
 				</div>
 				<div class="form-group">
-					<button type="submit" class="btn btn-success">
+					<button type="submit" class="btn btn-success pull-right">
 						<span class="glyphicon glyphicon-log-in"></span> Login
 					</button>
 				</div>
